# sbmt

./: .gitmodules  CMakeLists.txt  FindBerkeleyDB.cmake  FindTBB.cmake  Jamroot  README.md  boost-build.jam  find-source.sh  grep-source.sh  sbmt-util.jam  site-config.jam.template  user-config.jam.template
RuleReader/: CMakeLists.txt  Doxyfile  Jamfile  Makefile.am  README  acinclude.m4  bootstrap  configure.ac
RuleReader/include/: Makefile.am
RuleReader/src/: ChangeLog  Makefile.am  Makefile.bak  Rule.cc  RuleNode.cc  Stats.cc  Test.cc  sort_stats_out.pl
RuleReader/test/: Makefile.am  example.rules  example.rules1  test_RuleReader.cpp
argmin/: AUTHORS  COPYING  Doxyfile  README  TODO  argmin.kdevelop  argmin.kdevelop.pcs  configure.in  extract-at.pl  final-time.py  nbest-precision.pl
argmin/docs/: design.txt  parameters.txt  update-20060926.txt  update-20061003.txt  update-20061013.txt
argmin/src/: Agenda.hpp  Chart.cpp  Chart.hpp  CyclingAgenda.cpp  CyclingAgenda.hpp  Derivation.cpp  Derivation.hpp  Grammar.cpp  Grammar.hpp  Makefile.am  Minimizer.cpp  Minimizer.hpp  PriorityQueueAgenda.cpp  PriorityQueueAgenda.hpp  SetAgenda.cpp  SetAgenda.hpp  argmin.cpp  throw.hpp  types.hpp
argmin/templates/: cpp  hpp
biglm/cmph-0.8/: CMakeLists.txt  Jamfile  Makefile  Makefile.in  README  aclocal.m4  configure  libtool
biglm/pagh/: CMakeLists.txt  Jamfile  README  arpa.cpp  arpa.hpp  biglm.cpp  biglm.hpp  cmph.cpp  cmph.hpp  make_biglm.cpp  mod_biglm.cpp  quantizer.cpp  quantizer.hpp  run-make_biglm.sh  setup.sh  sliceable_bitset.hpp  types.hpp  use_biglm.cpp  verify_biglm.cpp
distortion_model/: CMakeLists.txt  Jamfile  cross_distortion_model.hpp  cross_distortion_model.py  disc_distortion_model.hpp  disc_distortion_model.py  distortion_model.cpp  distortion_model.hpp
ghkm/: CMakeLists.txt
ghkm/basic/: BipartiteGraph.cpp  BipartiteGraph.h  CMakeLists.txt  CompositeType.h  Descriptor.h  Doxyfile  EditDistance.h  Event.h  Histogram.h  KpartiteGraph.cpp  KpartiteGraph.h  LazyCD.h  Lcsr.h  LiBE.h  LiBEDebug.cpp  LiBEDebug.h  LiBEDefs.h  LiBEException.h  LiBEFunctions.h  LiBEList.h  LiBEPair.h  LiBESet.h  LiBEVector.h  MemDgnst.cpp  MemDgnst.h  MoreMaths.h  MultierSArray.cpp  MultierSArray.h  PairEvent.h  Projector.h  ScalarDescriptor.h  ScalarEvent.cpp  ScalarEvent.h  ScoreSet.h  StringVocabulary.cpp  StringVocabulary.h  SubStringVocabulary.cpp  SubStringVocabulary.h  Vocabulary.cpp  Vocabulary.h  (+5 more)
ghkm/gzstream/: Jamfile  Makefile  gzstream.h  test_gunzip  test_gzip
ghkm/lib/: libpcre++.la  libpcre++.so.0  libpcre.la  libpcre.so.0.0.1  libpcrecpp.la  libpcrecpp.so.0.0.0  libpcreposix.la  libpcreposix.so.0.0.0
ghkm/nstring/: nstring.h
ghkm/restruct/: Doxyfile  ForestNodes.cpp  ForestNodes.h  LabelSpan.cpp  LabelSpan.h  PackedForest.cpp  o  (+24 more)
graehl/: CMakeLists.txt  Jamfile  NOTES.gibbs  NOTES.mt
gusc/: CMakeLists.txt  Jamfile
itg-binarizer/: CMakeLists.txt  ChangeLog  Jamfile  Makefile.am  README  binal.cc  binal.lzlz.cc  configure.ac  from_daniel.brf  from_daniel.xrs  rule2.brf  rule2.xrs  rule3.brf  rule3.xrs  ruledemo.txt  rules.brf  rules.xrs  shared_rules.brf  shared_rules.xrs
max_count_feature/: CMakeLists.txt  Jamfile  cleanup_rprob_join  collapse_mapper.cpp  collapse_reducer  count_align_tagged  count_align_trivial_weighted  count_align_weighted  count_feature_mapper.cpp  count_feature_reducer  divide  emitdict.cpp  featval_mapper.cpp  fields.cpp  fliprule.cpp  idfirst.cpp  ifea.cpp  lc  lex_mapper1.cpp  lex_mapper2  lex_reduce2  lower.cpp  max_feature_mapper.cpp  max_feature_reducer.cpp  max_feature_reducer.py  mkdata  nbcat.cpp  ratio_mapper.cpp  ratio_reducer.cpp  ratio_reducer.py  remove_internals.cpp  reshape_join_mapper.py  root_hw.hpp  root_hw_count.cpp  root_hw_prob.cpp  rootcount.cpp  rootprob.cpp  rootprob.hpp  rootprob_reducer.cpp  rule_all_features_mapper.cpp  (+15 more)
pipelines/: CMakeLists.txt  Jamfile  README  decodeprogress.sh  runcorpus.sh  runcorpusdecode.sh  runcorpustune.sh  rundecode.sh  runrerank.sh  runrules.sh  runtune.sh  set-traps.sh  start-hadoop-server.sh  start-mpich.sh  start-openmpi.sh  start-python.sh
rule_decompose/: CMakeLists.txt  Jamfile  binalgo.cpp  binalgo.hpp  decompbin  decompose.cpp  justdecomp.cpp  leaflm.cpp  lhs_size_map.cpp  minfilter.cpp  train2rule
rule_head/: CMakeLists.txt  Jamfile  at_replace.cpp  child_head_mapper.cpp  child_head_reducer  child_head_symbol_mapred  child_head_symbol_prob_mapper  constants_hpp.py  headtables2dict  info_state.hpp  nt_head_mapper.cpp  rule_head.py  rule_head_add_command  rule_head_feature_mapper.cpp  rule_head_hwpos_mapper.cpp  rule_head_info.cpp  rule_head_info.new.cpp  rule_head_info2.cpp  rule_head_info_new.cpp  rule_head_join_reducer  rule_head_mapper.cpp  rule_head_nonlex_filter  rule_head_ntsum_mapred  rule_head_reducer  rule_head_score_reducer  rule_head_similarity_mapred  rule_head_simple_backoff  rule_head_sum_mapred  rule_head_sum_reducer  rule_lexfree_headword_distribution  rule_lexfree_headword_matrix  rule_lexfree_sum_mapred  scrreduce  small_example
rule_length/: CMakeLists.txt  Jamfile  rule_length_info.cpp  rule_length_info.hpp  rule_length_mapper.cpp  rule_length_reducer
sbmt_decoder/: CMakeLists.txt  DEVELOPERS  INSTALL  Jamfile  acinclude.m4  bootstrap  configure.ac  configure.scan  sbmt_decoder.doxygen
utilities/: ApplicableRuleFilter.pm  CMakeLists.txt  Jamfile  Makefile.am  README  README.mini_decoder  acinclude.m4  any_info_grammar.hpp  bashlib.sh  bootstrap  collapse_duplicates.pl  configure.ac  corpus-map.pl  decode.sh  decode_sequence_reader.cpp  decode_sequence_reader.hpp  echo_rules.cpp  eforest.py  epsilon-lmstring.pl  etree-prior.pl  force-tree-ins.pl  force-vizualize-ins.pl  force_decoder.cpp  forest-em-binary-to-xrs.py  forest-nbest-compare.py  forest.py  gen-archive-pkg.pl  gen-force-decode-pkg.pl  gen3  grammar_args.cpp  grammar_args.hpp  info_decoder.cpp  kbest.py  lattice_grammar.hpp  lattice_tree_construct.cpp  lib-corpus-map.pl  logging.hpp  lw-lm-score.pl  make-instruction-file.pl  make-sub-lm  (+32 more)
xrsparse/: CMakeLists.txt  Jamfile
(+1950 files in other folders)
