AC_INIT(configure.in)

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(argmin, 0.1)

AC_LANG_CPLUSPLUS
AC_PROG_CXX
AM_PROG_LIBTOOL

## Checks for libraries.
#boost_version_string="1.33.0"
#AX_BOOST_VERSION_CURRENT($boost_version_string)
#if test $ax_boost_version_current = "no"; then
#    AC_MSG_ERROR([this project requires a version of boost >= $boost_version_string])
#fi
#
#AX_BOOST_IOSTREAMS
#if test $ax_boost_iostreams = "no"; then
#    AC_MSG_ERROR([could not build against boost::iostreams.]
#                 [if you think you have this library, try setting --with-boost-suffix, ]
#                 [and make sure the compiler/linker/loader can find headers/libs])
#fi
#
#AX_BOOST_PROGRAM_OPTIONS
#if test $ax_boost_program_options = "no"; then
#    AC_MSG_ERROR([could not build against boost::program_options.]
#                 [if you think you have this library, try setting --with-boost-suffix, ]
#                 [and make sure the compiler/linker/loader can find headers/libs])
#fi
#
#AX_BOOST_DATE_TIME
#if test $ax_boost_date_time = "no"; then
#    AC_MSG_ERROR([could not build against boost::date_time.]
#                 [if you think you have this library, try setting --with-boost-suffix, ]
#                 [and make sure the compiler/linker/loader can find headers/libs])
#fi
#
#AX_BOOST_DATE_TIME
#if test $ax_boost_filesystem = "no"; then
#    AC_MSG_ERROR([could not build against boost::filesystem.]
#                 [if you think you have this library, try setting --with-boost-suffix, ]
#                 [and make sure the compiler/linker/loader can find headers/libs])
#fi
#
##SBMT_RULEREADER
##if test $sbmt_rulereader = "no"; then
##    AC_MSG_ERROR([Headers and/or libs for RuleReader were not found.  ]
##                 [Please install RuleReader to somewhere we can find it.  ]  
##                 [An installable RuleReader can be found at ]
##                 [https://nlg0.isi.edu/svn/sbmt/trunk/RuleReader ]
##                 [If you have installed it to a non-standard location, set ]
##                 [CPPFLAGS = -I$header-location , ]
##                 [LDFLAGS  = -L$lib-location , and ]
##                 [LD_LIBRARY_PATH = $lib-location to find headers/libs.])
##fi
#
#SBMT_LIBSBMT
#if test $sbmt_libsbmt = "no"; then
#    AC_MSG_ERROR([Headers and/or libs for libsbmt were not found.  ]
#                 [Please install libsbmt to somewhere we can find it.  ]  
#                 [libsbmt can be found at ]
#                 [https://nlg0.isi.edu/svn/sbmt/trunk/sbmt_decoder ]
#                 [If you have installed it to a non-standard location, set ]
#                 [CPPFLAGS = -I$header-location , ]
#                 [LDFLAGS  = -L$lib-location , and ]
#                 [LD_LIBRARY_PATH = $lib-location to find headers/libs.])
#fi

AC_OUTPUT(Makefile src/Makefile)
